# cloud-edge-agent

./: .env.example  .gitignore  README.md  README_cn.md  arch&plan.md  cloud-edge-agent.md  project.md  pyproject.toml
app/: main.py
app/api/dependencies/: deps.py
app/api/routers/: chat.py  documents.py
app/api/schemas/: chat.py
app/core/config/: settings.py
app/core/logger/: logger.py
app/services/: agent_orchestrator.py  chat_service.py  privacy_engine.py
benchmark/: README.md  RESULTS_FULL_L2.md  __init__.py  download_tab_dataset.py  privacy_benchmark.py
benchmark/results/: privacy_benchmark_20260703_133640.json  privacy_benchmark_20260703_134238.json  privacy_benchmark_20260703_134243.json  privacy_benchmark_20260703_134328.json  privacy_benchmark_20260703_134332.json  privacy_benchmark_20260703_134403.json  privacy_benchmark_20260703_135244.json  privacy_benchmark_20260703_135849.json  privacy_benchmark_20260703_140146.json  privacy_benchmark_20260703_140608.json  privacy_benchmark_20260706_094601.json  privacy_benchmark_20260706_111543.json
data/: local_memory.db
datasets/tab/: tab_dataset.json
docs/: code-review-report.md
experiments/: exp1_latency.py  exp2_token_savings.py  experiments.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
scripts/: cli.py
tests/integration/: test_chat_flow.py
tests/unit/: test_chat_service.py  test_chunker.py  test_llm_embedder.py  test_policy.py  test_privacy_benchmark.py  test_qdrant_store.py  test_reranker.py  test_retriever.py
(+37 files in other folders)
